--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "amphp/cache": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8 | ^7"
     },
     "license": "MIT",
     "authors": [
