--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "amphp/cache": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8 | ^7"
+        "phpunit/phpunit": "^8 | ^7",
+        "amphp/php-cs-fixer-config": "dev-master"
     },
     "license": "MIT",
     "authors": [
@@ -30,5 +31,9 @@
         "files": [
             "src/functions.php"
         ]
+    },
+    "scripts": {
+        "test": "php vendor/bin/phpunit",
+        "code-style": "php vendor/bin/php-cs-fixer fix"
     }
 }
