--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-filter": "*",
         "amphp/amp": "^2.1",
         "amphp/http": "^1.3",
-        "amphp/http-client": "dev-master as 4.0",
+        "amphp/http-client": "4.0.0-rc1",
         "amphp/cache": "^1.2",
         "psr/log": "^1.1"
     },
