--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "amphp/http": "^1.5",
         "amphp/http-client": "4.0.0-rc9",
         "amphp/cache": "^1.2",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "kelunik/string": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8 | ^7",
