--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-filter": "*",
         "amphp/amp": "^2.4",
         "amphp/http": "^1.5",
-        "amphp/http-client": "dev-http2-split as 4.0.0-rc9",
+        "amphp/http-client": "^4",
         "amphp/cache": "^1.3",
         "psr/log": "^1.1",
         "kelunik/string": "^1.0"
@@ -28,8 +28,6 @@
             "email": "me@kelunik.com"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Amp\\Http\\Client\\Cache\\": "src"
