--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,13 @@ install:
   - wget https://phar.phpunit.de/phpcov.phar -O coverage/bin/phpcov
   - chmod +x coverage/bin/phpcov
 
+  - wget https://github.com/maglnet/ComposerRequireChecker/releases/download/2.0.0/composer-require-checker.phar
+
   - composer show
 
 script:
   - phpdbg -qrr vendor/bin/phpunit --verbose --coverage-php coverage/cov/main.cov
+  - php composer-require-checker.phar check composer.json --config-file $PWD/composer-require-check.json
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
