--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
         "php": ">=7.2",
         "ext-json": "*",
         "ext-filter": "*",
+        "ext-hash": "*",
         "amphp/amp": "^2.4",
         "amphp/http": "^1.5",
         "amphp/http-client": "^4",
         "amphp/cache": "^1.3",
         "psr/log": "^1.1",
-        "kelunik/string": "^1.0"
+        "kelunik/string": "^1.0",
+        "amphp/byte-stream": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^8 | ^7",
