--- a/composer.json
+++ b/composer.json
@@ -3,26 +3,28 @@
     "description": "An async HTTP cache for Amp's HTTP client.",
     "type": "library",
     "require": {
-        "php": ">=7.2",
+        "php": ">=8",
         "ext-json": "*",
         "ext-filter": "*",
         "ext-hash": "*",
-        "amphp/amp": "^2.4",
+        "amphp/amp": "^3-dev",
         "amphp/http": "^1.5",
-        "amphp/http-client": "^4",
-        "amphp/cache": "^1.3",
+        "amphp/http-client": "^5-dev",
+        "amphp/cache": "^2-dev",
         "psr/log": "^1.1",
         "kelunik/string": "^1.0",
-        "amphp/byte-stream": "^1.7"
+        "amphp/byte-stream": "^2-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8 | ^7",
+        "phpunit/phpunit": "^9",
         "amphp/php-cs-fixer-config": "dev-master",
-        "monolog/monolog": "^1.24",
-        "amphp/log": "^1.0",
-        "amphp/phpunit-util": "^1.1",
-        "amphp/file": "^1.0"
+        "monolog/monolog": "^1.24 || ^2",
+        "amphp/log": "^2-dev",
+        "amphp/phpunit-util": "^2-dev",
+        "amphp/file": "^3-dev"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "license": "MIT",
     "authors": [
         {
@@ -39,7 +41,7 @@
         ]
     },
     "conflict": {
-        "amphp/file": "<0.2 || >=2"
+        "amphp/file": "<3 || >=4"
     },
     "scripts": {
         "test": "php vendor/bin/phpunit",
