--- a/composer.json
+++ b/composer.json
@@ -3,25 +3,25 @@
     "description": "An async HTTP cache for Amp's HTTP client.",
     "type": "library",
     "require": {
-        "php": ">=8",
+        "php": ">=8.1",
         "ext-json": "*",
         "ext-filter": "*",
         "ext-hash": "*",
-        "amphp/amp": "^3-dev",
+        "amphp/amp": "^3",
+        "amphp/byte-stream": "^2",
         "amphp/http": "^1.5",
-        "amphp/http-client": "^5-dev",
-        "amphp/cache": "^2-dev",
+        "amphp/http-client": "^5",
+        "amphp/cache": "^2",
         "psr/log": "^1.1",
-        "kelunik/string": "^1.0",
-        "amphp/byte-stream": "^2-dev"
+        "kelunik/string": "^1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
-        "amphp/php-cs-fixer-config": "dev-master",
-        "monolog/monolog": "^1.24 || ^2",
-        "amphp/log": "^2-dev",
-        "amphp/phpunit-util": "^2-dev",
-        "amphp/file": "^3-dev"
+        "amphp/php-cs-fixer-config": "^2",
+        "monolog/monolog": "^1.24|^2",
+        "amphp/log": "^2",
+        "amphp/phpunit-util": "^3",
+        "amphp/file": "^3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -39,6 +39,11 @@
         "files": [
             "src/functions.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Amp\\Http\\Client\\Cache\\": "test"
+        }
     },
     "conflict": {
         "amphp/file": "<3 || >=4"
