--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "amphp/http": "^1.5",
         "amphp/http-client": "^5",
         "amphp/cache": "^2",
-        "psr/log": "^1.1",
-        "kelunik/string": "^1"
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
@@ -21,7 +20,8 @@
         "monolog/monolog": "^1.24|^2",
         "amphp/log": "^2",
         "amphp/phpunit-util": "^3",
-        "amphp/file": "^3"
+        "amphp/file": "^3",
+        "psalm/phar": "^4.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
