--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-hash": "*",
         "amphp/amp": "^3",
         "amphp/byte-stream": "^2",
-        "amphp/http": "^2-dev",
+        "amphp/http": "^2",
         "amphp/http-client": "^5",
         "amphp/cache": "^2",
         "amphp/pipeline": "^1",
@@ -24,8 +24,6 @@
         "amphp/file": "^3",
         "psalm/phar": "^5.6"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "license": "MIT",
     "authors": [
         {
